# Carbon

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: prove_cross_gpu.py  prove_determinism.py  real_model_determinism.py
carbon/: __init__.py  deterministic.py  matmul.py  reduction.py  summation.py  wgpu_backend.py  wrapper.py
paper/: carbon.tex
paper/figures/: gen_figures.py
tests/: test_matmul.py  test_summation.py  test_wgpu_backend.py
