[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alia-carbon"
version = "0.2.0"
description = "Bit-exact deterministic deep learning training across heterogeneous hardware"
authors = [{name = "Tushar Sharma", email = "txshar@proton.me"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
wgpu = ["wgpu>=0.15"]
dev = ["pytest>=7.0", "pytest-benchmark"]
all = ["wgpu>=0.15"]

[project.urls]
Homepage = "https://github.com/TxsharDev/carbon"

[tool.setuptools.packages.find]
where = ["."]
include = ["carbon*"]
